View Issue Details

IDProjectCategoryView StatusLast Update
0028681Open CASCADEOCCT:Shape Healingpublic2018-06-29 21:19
ReportermsvAssigned Toapn  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Product Version7.1.0 
Target Version7.3.0Fixed in Version7.3.0 
Summary0028681: UnifySameDomain distorts face boundary when merges a chain of small linear edges
DescriptionSee the test case "bugs modalg_6 bug28207". The 3rd operation is done with angular tolerance equal to 1 radian. The linear tolerance is as default 1e-7. The face boundary has significant distortion in the result shape.
Steps To Reproducerestore [locate_data_file bug28207_face.brep] a
unifysamedom r a -a 1
checkprops r -s 5.09613e+006
TagsNo tags attached.
Test case numberbugs modalg_6 bug28207

Attached Files

  • init_face.PNG (6,555 bytes)
  • unified_face.PNG (6,755 bytes)

Relationships

parent of 0029544 closedbugmaster Open CASCADE Regression vs 7.2.0: ShapeUpgrade_UnifySameDomain fails to merge linear edges 

Activities

msv

2017-04-25 11:54

developer  

init_face.PNG (6,555 bytes)

msv

2017-04-25 11:54

developer  

unified_face.PNG (6,755 bytes)

git

2017-05-11 13:57

administrator   ~0065830

Branch CR28681 has been created by isn.

SHA-1: eab278b5f4047b3f9ebd17848c9b93faddf558ce


Detailed log of new commits:

Author: isn
Date: Wed May 10 20:27:29 2017 +0300

    0028681: UnifySameDomain distorts face boundary when merges a chain of small linear edges
    
    GenerateSubSeq(..): take into account a linear tolerance

msv

2017-05-12 10:07

developer   ~0065864

src\ShapeUpgrade\ShapeUpgrade_UnifySameDomain.cxx
- Make understandable names of parameters of the method IsMergingPossible 'bF', 'aFP', 'aRVec'. And start them with 'the'.
- 996: loop is extra, as trimmed curve cannot contain a trimmed curve.
- 1008: OK as it is.
- 1049: the line is extra.
- 1060: when IsClosed it is needed to call IsMergingPossible with 'isF' set to false.

msv

2017-05-12 10:08

developer   ~0065865

Please create test case.

git

2017-09-13 12:08

administrator   ~0070494

Branch CR28681_1 has been created by isn.

SHA-1: 0cc2df048d3e6b9ff2cae77d04f395dc69798431


No new revisions were added by this update.

msv

2017-09-14 11:42

developer   ~0070525

Commit message must contain a clear description of changes. The phrase "GenerateSubSeq(..): take into account a linear tolerance" is very unclear.

- Again: Make understandable names of parameters of the method IsMergingPossible 'bF', 'aFP', 'aRVec'. And start them with 'the'.

git

2017-09-14 15:28

administrator   ~0070534

Branch CR28681_1 has been updated by isn.

SHA-1: 36a72c18c1550fc55957f308557e35f6d65a44c5


Detailed log of new commits:

Author: isn
Date: Thu Sep 14 14:30:01 2017 +0300

    correction

git

2017-09-14 15:34

administrator   ~0070538

Branch CR28681_2 has been created by isn.

SHA-1: c800f8cf25127aa73592366c7fef55dfa02bb21f


Detailed log of new commits:

Author: isn
Date: Mon Sep 11 16:53:31 2017 +0300

    0028681: UnifySameDomain distorts face boundary when merges a chain of small linear edges
    
    In case of sequence of edges based on lines (which are going to be unified into one line-segment), take into account a linear tolerance value.

msv

2017-09-14 15:52

developer   ~0070541

tests/bugs/modalg_7/bug28681 is lost.

git

2017-09-14 16:06

administrator   ~0070542

Branch CR28681_2 has been updated forcibly by isn.

SHA-1: f64c89460f0b014158a89e90e6facb69b7b7e110

isn

2017-09-14 17:06

developer   ~0070548

Last edited: 2017-09-14 17:07

job 'CR28681-master-isn' has been started

msv

2017-09-15 10:28

developer   ~0070568

The tests failed:
bugs modalg_6 bug28207
bugs modalg_7 bug27004
Please update.

git

2017-09-15 17:31

administrator   ~0070602

Branch CR28681_2 has been updated by isn.

SHA-1: aa2b6df48b169bc0c1d8dc63f5b5dbe30eb2638b


Detailed log of new commits:

Author: isn
Date: Fri Sep 15 17:31:09 2017 +0300

    get rid of regressions

msv

2017-09-15 18:08

developer   ~0070606

Reviewed.

bugmaster

2017-09-16 10:29

administrator   ~0070616

Combination -
OCCT branch : CR28681_2 SHA-1: aa2b6df48b169bc0c1d8dc63f5b5dbe30eb2638b
Products branch : master
was compiled on Linux, MacOS and Windows platforms and tested on optimize mode.

http://jenkins-test-10.nnov.opencascade.com/view/CR28681-master-isn

Number of compiler warnings:
No new warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
No differences that require special attention

Image differences :
Please confirm image changes
http://occt-tests/CR28681-master-isn-OCCT/Windows-64-VC10/diff-Windows-64-VC10-image.html
http://occt-tests/CR28681-master-isn-OCCT/Debian70-64/diff-Debian70-64-image.html
IMAGE bugs heal bug27729: bug27729.png differs
IMAGE bugs modalg_6 bug28207: bug28207.png differs

Memory differences :
No differences that require special attention

isn

2017-09-18 12:15

developer   ~0070624

>> Please confirm image changes

This is OK, so reference images can be updated.

git

2017-12-20 18:15

administrator   ~0073056

Branch CR28681_3 has been created by isn.

SHA-1: ad6df01bcdfc197b7cebbf8ae1ca17bea3a4416f


Detailed log of new commits:

Author: isn
Date: Fri Sep 15 17:31:09 2017 +0300

    get rid of regressions

Author: isn
Date: Mon Sep 11 16:53:31 2017 +0300

    0028681: UnifySameDomain distorts face boundary when merges a chain of small linear edges
    
    In case of sequence of edges based on lines (which are going to be unified into one line-segment), take into account a linear tolerance value.

isn

2017-12-21 16:47

developer   ~0073075

Rebased (new branch is CR28681_3) and tested:
http://jenkins-test-10.nnov.opencascade.com/view/CR28681_3-master-isn/
There are some differences on linux (http://occt-tests/CR28681_3-master-isn-Products/Debian70-64/diff_summary.html), but it looks like some kind of instability since Dxf-reader don't use unifysamedom.

msv

2017-12-22 10:09

developer   ~0073080

Remarks:
- Remove the test bug28681, as it repeats the test bug28207.
- Improve the test bug28207, adding checkprops, and also putting the parameter "-t" in the commands to show ability of the algorithm to simplify such kind of shapes.

The test dxf read bug25988_14 always shows differences on both platforms.

git

2018-01-09 16:31

administrator   ~0073272

Branch CR28681_4 has been created by isn.

SHA-1: 9766cb806db94110c8c3caecce087b166fd9c497


Detailed log of new commits:

Author: isn
Date: Tue Jan 9 15:31:52 2018 +0300

    updates of USD-tests

Author: isn
Date: Fri Sep 15 17:31:09 2017 +0300

    get rid of regressions

Author: isn
Date: Mon Sep 11 16:53:31 2017 +0300

    0028681: UnifySameDomain distorts face boundary when merges a chain of small linear edges
    
    In case of sequence of edges based on lines (which are going to be unified into one line-segment), take into account a linear tolerance value.

msv

2018-01-11 12:57

developer   ~0073349

Reviewed.

apn

2018-01-11 14:50

administrator   ~0073357

Combination -
OCCT branch : CR28681_4 SHA - 9766cb806db94110c8c3caecce087b166fd9c497
Products branch : master SHA - c667ca9e3bc920614b06911e337a09899f80aa2f
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

Test case:
bugs modalg_6 bug28207 - OK

CPU differences:
Debian70-64:
OCCT
Total CPU difference: 18557.969999999677 / 18498.959999999654 [+0.32%]
CPU bugs modalg_6 bug28207: 0.87 / 0.16 [+443.75%] - caused by significant changes in test case
Products
Total CPU difference: 7518.550000000003 / 7484.560000000007 [+0.45%]
Windows-64-VC10:
OCCT
Total CPU difference: 17995.698156298648 / 17960.90993329856 [+0.19%]
CPU bugs modalg_6 bug28207: 0.936006 / 0.1716011 [+445.45%] - caused by significant changes in test case
Products
Total CPU difference: 8011.509355499981 / 8020.448212799986 [-0.11%]

Image differences :
IMAGE bugs heal bug27729: bug27729.png differs
IMAGE bugs modalg_6 bug28207: bug28207.png differs
Differences in images were confirmed.

Memory differences :
No differences that require special attention

git

2018-02-05 11:39

administrator   ~0073760

Branch CR28681 has been deleted by kgv.

SHA-1: eab278b5f4047b3f9ebd17848c9b93faddf558ce

git

2018-02-05 11:39

administrator   ~0073761

Branch CR28681_1 has been deleted by kgv.

SHA-1: 36a72c18c1550fc55957f308557e35f6d65a44c5

git

2018-02-05 11:39

administrator   ~0073762

Branch CR28681_2 has been deleted by kgv.

SHA-1: aa2b6df48b169bc0c1d8dc63f5b5dbe30eb2638b

git

2018-02-05 11:39

administrator   ~0073763

Branch CR28681_3 has been deleted by kgv.

SHA-1: ad6df01bcdfc197b7cebbf8ae1ca17bea3a4416f

git

2018-02-05 11:39

administrator   ~0073764

Branch CR28681_4 has been deleted by kgv.

SHA-1: 9766cb806db94110c8c3caecce087b166fd9c497

Related Changesets

occt: master 1f59dfa9

2017-09-11 13:53:31

isn


Committer: apn Details Diff
0028681: UnifySameDomain distorts face boundary when merges a chain of small linear edges

In case of sequence of edges based on lines (which are going to be unified into one line-segment), take into account a linear tolerance value.
Get rid of regressions.
Updates of USD-tests.
Affected Issues
0028681
mod - src/ShapeUpgrade/ShapeUpgrade_UnifySameDomain.cxx Diff File
mod - tests/bugs/modalg_6/bug28207 Diff File
mod - tests/bugs/modalg_7/bug27004 Diff File

Issue History

Date Modified Username Field Change
2017-04-25 11:54 msv New Issue
2017-04-25 11:54 msv Assigned To => msv
2017-04-25 11:54 msv File Added: init_face.PNG
2017-04-25 11:54 msv File Added: unified_face.PNG
2017-05-05 18:43 msv Assigned To msv => isn
2017-05-05 18:43 msv Status new => assigned
2017-05-11 13:57 git Note Added: 0065830
2017-05-11 14:02 isn Assigned To isn => msv
2017-05-11 14:02 isn Status assigned => resolved
2017-05-12 10:07 msv Note Added: 0065864
2017-05-12 10:07 msv Assigned To msv => isn
2017-05-12 10:07 msv Status resolved => assigned
2017-05-12 10:08 msv Note Added: 0065865
2017-07-20 13:00 msv Target Version 7.2.0 => 7.3.0
2017-07-20 14:05 msv Target Version 7.3.0 => 7.2.0
2017-08-28 18:37 abv Target Version 7.2.0 => 7.3.0
2017-09-13 12:08 git Note Added: 0070494
2017-09-13 12:11 isn Assigned To isn => msv
2017-09-13 12:11 isn Status assigned => resolved
2017-09-14 11:42 msv Note Added: 0070525
2017-09-14 11:42 msv Assigned To msv => isn
2017-09-14 11:42 msv Status resolved => assigned
2017-09-14 15:28 git Note Added: 0070534
2017-09-14 15:34 git Note Added: 0070538
2017-09-14 15:35 isn Assigned To isn => msv
2017-09-14 15:35 isn Status assigned => resolved
2017-09-14 15:52 msv Note Added: 0070541
2017-09-14 15:52 msv Assigned To msv => isn
2017-09-14 15:52 msv Status resolved => assigned
2017-09-14 16:06 git Note Added: 0070542
2017-09-14 16:09 isn Assigned To isn => msv
2017-09-14 16:09 isn Status assigned => resolved
2017-09-14 17:06 isn Note Added: 0070548
2017-09-14 17:07 isn Note Edited: 0070548
2017-09-15 10:28 msv Note Added: 0070568
2017-09-15 10:28 msv Assigned To msv => isn
2017-09-15 10:28 msv Status resolved => assigned
2017-09-15 17:31 git Note Added: 0070602
2017-09-15 17:55 isn Assigned To isn => msv
2017-09-15 17:55 isn Status assigned => resolved
2017-09-15 18:08 msv Note Added: 0070606
2017-09-15 18:08 msv Assigned To msv => bugmaster
2017-09-15 18:08 msv Status resolved => reviewed
2017-09-16 10:11 bugmaster Test case number => bugs modalg_7 bug28681
2017-09-16 10:29 bugmaster Note Added: 0070616
2017-09-16 10:29 bugmaster Status reviewed => feedback
2017-09-16 10:45 bugmaster Assigned To bugmaster => isn
2017-09-18 12:15 isn Note Added: 0070624
2017-09-18 12:16 isn Assigned To isn => bugmaster
2017-09-18 12:16 isn Status feedback => assigned
2017-12-20 18:15 git Note Added: 0073056
2017-12-21 16:47 isn Note Added: 0073075
2017-12-21 16:47 isn Assigned To bugmaster => msv
2017-12-21 16:47 isn Status assigned => resolved
2017-12-22 10:09 msv Note Added: 0073080
2017-12-22 10:09 msv Assigned To msv => isn
2017-12-22 10:09 msv Status resolved => assigned
2018-01-09 16:31 git Note Added: 0073272
2018-01-10 12:37 isn Assigned To isn => msv
2018-01-10 12:37 isn Status assigned => resolved
2018-01-11 12:57 msv Note Added: 0073349
2018-01-11 12:57 msv Assigned To msv => bugmaster
2018-01-11 12:57 msv Status resolved => reviewed
2018-01-11 14:50 apn Test case number bugs modalg_7 bug28681 => bugs modalg_6 bug28207
2018-01-11 14:50 apn Note Added: 0073357
2018-01-11 14:50 apn Status reviewed => tested
2018-01-13 15:26 apn Changeset attached => occt master 1f59dfa9
2018-01-13 15:26 apn Assigned To bugmaster => apn
2018-01-13 15:26 apn Status tested => verified
2018-01-13 15:26 apn Resolution open => fixed
2018-02-05 11:39 git Note Added: 0073760
2018-02-05 11:39 git Note Added: 0073761
2018-02-05 11:39 git Note Added: 0073762
2018-02-05 11:39 git Note Added: 0073763
2018-02-05 11:39 git Note Added: 0073764
2018-02-18 23:42 abv Target Version 7.3.0 => 7.4.0
2018-02-20 12:58 aiv Target Version 7.4.0 => 7.3.0
2018-03-05 15:32 emv Relationship added parent of 0029544
2018-06-29 21:13 aiv Fixed in Version => 7.3.0
2018-06-29 21:19 aiv Status verified => closed