0028681: UnifySameDomain distorts face boundary when merges a chain of small linear edges

In case of sequence of edges based on lines (which are going to be unified into one line-segment), take into account a linear tolerance  value.
Get rid of regressions.
Updates of USD-tests.